--- a/Android/QSmartFashion/app/src/main/res/layout/profile_fragment_layout.xml
+++ b/Android/QSmartFashion/app/src/main/res/layout/profile_fragment_layout.xml
@@ -99,10 +99,28 @@
         android:editable="false"
         android:focusable="false"
         android:id="@+id/settings_birthdate"
+        android:layout_marginBottom="15dp"
         android:textSize="15sp"
         android:inputType="date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="Make Data Public"
+            android:textSize="17sp"
+            android:textColor="#11b2b2"
+            android:layout_marginRight="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <CheckBox
+            android:id="@+id/settings_public_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 
 </LinearLayout>
