--- a/Android/QSmartFashion/app/src/main/res/layout/simulated_dp_dialog.xml
+++ b/Android/QSmartFashion/app/src/main/res/layout/simulated_dp_dialog.xml
@@ -16,7 +16,7 @@
         android:textSize="15sp"
         android:layout_marginBottom="20dp"
         android:textColor="#000000"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -31,7 +31,7 @@
         android:textStyle="bold"
         android:textSize="15sp"
         android:textColor="#000000"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
